# plugin

./: .metadata  README.md  ffigen.yaml  ffigen_lame.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt
android/src/main/jniLibs/mips/: libshout.3.dylib
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_audio_streamer_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: flutter_audio_streamer.podspec
ios/Classes/: FlutterAudioStreamerPlugin.h  FlutterAudioStreamerPlugin.m  FlutterAudioStreamerPlugin.swift  flutter_audio_streamer.c  lame_wrapper.c  lame_wrapper.h  shout_wrapper.c  shout_wrapper.h
ios/include/shout/: shout.h
lib/: flutter_audio_streamer.dart  flutter_audio_streamer_bindings_generated.dart
lib/src/: lame_bindings.dart  libshout_bindings.dart
src/: CMakeLists.txt  audio_service.dart  audio_streamer.dart  flutter_audio_streamer.c  flutter_audio_streamer.h  lame.dart  shout.dart
